--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -21,10 +21,9 @@ jobs:
     name: Run Security Pipeline
     uses: a-henrique/devsecops-pipeline/.github/workflows/security-scan.yml@main
     with:
-      repo-token: ${{ secrets.personal_access_token }}
-      configuration-path: ${{ inputs.config-path }}
       repository: ${{ github.repository }}
       ref: ${{ github.ref }}
       language: 'java'  # Ajuste conforme o projeto
       skip_tools: ${{ github.event.inputs.skip_tools || '' }}
-    secrets: inherit
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }
